# saya_v2

./: README.md
Respeaker/: Readme
dialogflow-python-client-master/webhook-python/: bank.py
eva_arm_controller/config/: eva_arm.yaml~  eva_arm_trajectory_controller.yaml
eva_arm_controller/launch/: Hi.launch  current_position_publisher.launch  dance1.launch  dance2.launch  dance3.launch  dance4.launch  dance5.launch  dance6.launch  eva_arm_controller.launch  handshake.launch  play1.launch  play3.launch  play4.launch  play5.launch  play6.launch  record.launch  silent_pose.launch  speech_gesture.launch  speech_gesture1.launch  speech_gesture2.launch  speech_interaction.launch  stop.launch
eva_arm_controller/scripts/: front_left_wheel_current_position_publisher  front_right_wheel_current_position_publisher  joint1_current_position_publisher  joint2_current_position_publisher  joint3_current_position_publisher  joint4_current_position_publisher  joint5_current_position_publisher  joint6_current_position_publisher  joint7_current_position_publisher  joint8_current_position_publisher  pan_controller_current_position_publisher   pan_controller_current_position_publisher ~  pose_zero_with_gripper  set_all_torque  set_all_torque~
facerec-master/: CMakeLists.txt  CMakeLists.txt~  package.xml
facerec-master/scripts/: face_recog.py  face_server.py  train.py
facerec-master/srv/: service.srv
raspberry_pi_ssh/: start.sh~  stop.sh
saya_communication/: Readme.md
saya_communication/saya_communication/: CMakeLists.txt  package.xml  package.xml~
saya_communication/saya_hotword_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml
saya_communication/saya_speech_database/: CMakeLists.txt~  package.xml
saya_communication/saya_speech_recognition/: CMakeLists.txt  package.xml  package.xml~
saya_communication/saya_text_speech/: CMakeLists.txt~  package.xml
saya_hospitality_navigation/: Readme.md  Readme.md~
saya_hospitality_navigation/diff_drive_controller/: CMakeLists.txt
saya_hospitality_navigation/hdf_base/: CMakeLists.txt  package.xml
saya_hospitality_navigation/hdf_model/: manifest.xml
saya_hospitality_navigation/hdf_nav/: CMakeLists.txt  CMakeLists.txt~  my_map.pgm  my_map.yaml  package.xml
saya_hospitality_navigation/hdf_urdf/: hdfc.xacro  manifest.xml
saya_hospitality_navigation/saya_hospitality_navigation/: CMakeLists.txt  package.xml
saya_states/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
saya_states/scripts/: Dance.py  Dance.py~  Readme  ira.py  ira.py~  (+5 more)
(+121 files in other folders)
